--- a/mainScreen.html
+++ b/mainScreen.html
@@ -26,5 +26,10 @@
                 <span class="material-icons big orange">receipt_long</span>
             </a>
         </div>
+        <div class="card">
+            <a href="vacaciones">
+                <span class="material-icons big orange">beach_access</span>
+            </a>
+        </div>
     </div>
 </section>
